<resources>
    <string name="app_name">CloverRicknMorty</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">List</string>
    <string name="second_fragment_label">Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name:</string>
    <string name="status">Status</string>
    <string name="species">Species</string>
    <string name="location">Location: </string>
    <string name="type">Type: </string>
    <string name="dimension">Dimension</string>
    <string name="residents"># Residents</string>
    <string name="error">ERROR</string>
    <string name="searchMe">Search by name</string>
</resources>